--- a/modules/samples/consumers/axis2-log-service/build.xml
+++ b/modules/samples/consumers/axis2-log-service/build.xml
@@ -30,34 +30,28 @@
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
         <fileset dir="${cep.home}/repository/components/plugins/">
-            <include name="org.wso2.carbon.logging_4.2.0.jar"/>
-            <include name="commons-pool_1.5.6.wso2v1.jar"/>
-            <include name="com.google.gson_2.1.0.jar"/>
-            <include name="geronimo-jms_1.1_spec-1.1.1.jar"/>
-            <include name="guava_12.0.0.wso2v1.jar"/>
-            <include name="httpclient_4.2.5.wso2v1.jar"/>
-            <include name="httpcore_4.3.0.wso2v1.jar"/>
-            <include name="commons-httpclient_3.1.0.wso2v2.jar"/>
-            <include name="commons-codec_1.4.0.wso2v1.jar"/>
-            <include name="libthrift_0.7.0.wso2v2.jar"/>
-            <include name="slf4j.log4j12_1.6.1.jar"/>
-            <include name="slf4j.api_1.6.1.jar"/>
-            <include name="json_2.0.0.wso2v1.jar"/>
-            <include name="axis2_1.6.1.wso2v10.jar"/>
-            <include name="axiom_1.2.11.wso2v4.jar"/>
-            <include name="wsdl4j_1.6.2.wso2v4.jar"/>
-            <include name="XmlSchema_1.4.7.wso2v2.jar"/>
-            <include name="neethi_2.0.4.wso2v4.jar"/>
-            <include name="org.wso2.securevault_1.0.0.wso2v2.jar"/>
-            <!--<include name="org.wso2.carbon.authenticator.stub_4.2.0.jar"/>-->
-            <!--<include name="org.wso2.carbon.databridge.agent.thrift_4.2.0.jar"/>-->
-            <!--<include name="org.wso2.carbon.databridge.commons.thrift_4.2.0.jar"/>-->
-            <!--<include name="org.wso2.carbon.databridge.commons_4.2.0.jar"/>-->
-            <!--<include name="org.wso2.carbon.databridge.core_4.2.0.jar"/>-->
-            <!--<include name="org.wso2.carbon.databridge.receiver.thrift_4.2.0.jar"/>-->
-            <include name="org.wso2.carbon.base_4.2.0.jar"/>
-            <include name="org.wso2.carbon.identity.authentication_4.2.0.jar"/>
-            <include name="org.wso2.carbon.queuing_4.2.0.jar"/>
+            <include name="org.wso2.carbon.logging_*.jar"/>
+            <include name="commons-pool_*.jar"/>
+            <include name="com.google.gson_*.jar"/>
+            <include name="geronimo-jms_*.jar"/>
+            <include name="guava_*.jar"/>
+            <include name="httpclient_*.jar"/>
+            <include name="httpcore_*.jar"/>
+            <include name="commons-httpclient_*.jar"/>
+            <include name="commons-codec_*.jar"/>
+            <include name="libthrift_*.jar"/>
+            <include name="slf4j.log4j12_*.jar"/>
+            <include name="slf4j.api_*.jar"/>
+            <include name="json_*.jar"/>
+            <include name="axis2_*.jar"/>
+            <include name="axiom_*.jar"/>
+            <include name="wsdl4j_*.jar"/>
+            <include name="XmlSchema_*.jar"/>
+            <include name="neethi_*.jar"/>
+            <include name="org.wso2.securevault_*.jar"/>
+            <include name="org.wso2.carbon.base_*.jar"/>
+            <include name="org.wso2.carbon.identity.authentication_*.jar"/>
+            <include name="org.wso2.carbon.queuing_*.jar"/>
         </fileset>
     </path>
 
