--- a/modules/samples/consumers/wso2-event/build.xml
+++ b/modules/samples/consumers/wso2-event/build.xml
@@ -34,7 +34,7 @@
         <fileset dir="${cep.home}/repository/components/plugins/">
             <include name="org.wso2.carbon.logging_*.jar"/>
             <include name="com.google.gson_*.jar"/>
-            <include name="guava_*.jar"/>
+            <include name="com.google.guava_*.jar"/>
             <include name="libthrift_*.jar"/>
             <include name="slf4j.log4j*.jar"/>
             <include name="slf4j.api_*.jar"/>
