Fixing samples dependency issues

--- a/modules/samples/producers/pizza-shop/build.xml
+++ b/modules/samples/producers/pizza-shop/build.xml
@@ -38,18 +38,18 @@
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
         <fileset dir="${cep.home}/repository/components/plugins/">
-            <include name="org.wso2.carbon.logging_4.2.0.jar"/>
-            <include name="commons-pool_1.5.6.wso2v1.jar"/>
-            <include name="httpclient_4.2.5.wso2v1.jar"/>
-            <include name="httpcore_4.3.0.wso2v1.jar"/>
-            <include name="commons-httpclient_3.1.0.wso2v2.jar"/>
-            <include name="commons-codec_1.4.0.wso2v1.jar"/>
-            <include name="slf4j.log4j12_1.6.1.jar"/>
-            <include name="slf4j.api_1.6.1.jar"/>
-            <include name="axis2_1.6.1.wso2v10.jar"/>
-            <include name="axiom_1.2.11.wso2v4.jar"/>
-            <include name="wsdl4j_1.6.2.wso2v4.jar"/>
-            <include name="XmlSchema_1.4.7.wso2v2.jar"/>
+            <include name="org.wso2.carbon.logging_*.jar"/>
+            <include name="commons-pool_*.jar"/>
+            <include name="httpclient_*.jar"/>
+            <include name="httpcore_*.jar"/>
+            <include name="commons-httpclient_*.jar"/>
+            <include name="commons-codec_*.jar"/>
+            <include name="slf4j.log4j12_*.jar"/>
+            <include name="slf4j.api_*.jar"/>
+            <include name="axis2_*.jar"/>
+            <include name="axiom_*.jar"/>
+            <include name="wsdl4j_*.jar"/>
+            <include name="XmlSchema_*.jar"/>
             <include name="neethi_*.jar"/>
             <include name="org.wso2.securevault_*.jar"/>
             <include name="org.wso2.carbon.databridge.agent.thrift_*.jar"/>
