--- a/modules/distribution/repository/conf/log4j.properties
+++ b/modules/distribution/repository/conf/log4j.properties
@@ -88,7 +88,7 @@ log4j.additivity.com.atomikos=false
 log4j.logger.org.apache.axis2.description.java2wsdl.DefaultSchemaGenerator=ERROR
 
 # CARBON_CONSOLE is set to be a ConsoleAppender using a PatternLayout.
-log4j.appender.CARBON_CONSOLE=org.wso2.carbon.utils.logging.appenders.CarbonConsoleAppender
+log4j.appender.CARBON_CONSOLE=org.wso2.carbon.logging.appenders.CarbonConsoleAppender
 log4j.appender.CARBON_CONSOLE.layout=org.wso2.carbon.utils.logging.TenantAwarePatternLayout
 # ConversionPattern will be overridden by the configuration setting in the DB
 log4j.appender.CARBON_CONSOLE.layout.ConversionPattern=[%d{ISO8601}] %5p - {%c{1}}  %m%n
@@ -106,7 +106,7 @@ log4j.appender.CARBON_MEMORY.threshold=DEBUG
 log4j.appender.CARBON_MEMORY.bufferSize=2000
 
 # CARBON_LOGFILE is set to be a DailyRollingFileAppender using a PatternLayout.
-log4j.appender.CARBON_LOGFILE=org.wso2.carbon.utils.logging.appenders.CarbonDailyRollingFileAppender
+log4j.appender.CARBON_LOGFILE=org.wso2.carbon.logging.appenders.CarbonDailyRollingFileAppender
 # Log file will be overridden by the configuration setting in the DB
 # This path should be relative to WSO2 Carbon Home
 log4j.appender.CARBON_LOGFILE.File=${carbon.home}/repository/logs/${instance.log}/wso2carbon${instance.log}.log
@@ -171,7 +171,7 @@ log4j.appender.EVENT_TRACE_APPENDER.layout=org.apache.log4j.PatternLayout
 log4j.appender.EVENT_TRACE_APPENDER.layout.ConversionPattern=%d{HH:mm:ss,SSS} [%X{ip}-%X{host}] [%t] %5p %c{1} %m%n
 
 # The memory appender for trace logger
-log4j.appender.EVENT_TRACE_MEMORYAPPENDER=org.wso2.carbon.utils.logging.appenders.MemoryAppender
+log4j.appender.EVENT_TRACE_MEMORYAPPENDER=org.wso2.carbon.logging.appenders.MemoryAppender
 log4j.appender.EVENT_TRACE_MEMORYAPPENDER.bufferSize=2000
 log4j.appender.EVENT_TRACE_MEMORYAPPENDER.layout=org.apache.log4j.PatternLayout
 log4j.appender.EVENT_TRACE_MEMORYAPPENDER.layout.ConversionPattern=%d{HH:mm:ss,SSS} [%X{ip}-%X{host}] [%t] %5p %m%n
