Enhancements to perfromance test client

--- a/modules/samples/producers/performance-test/src/main/resources/log4j.properties
+++ b/modules/samples/producers/performance-test/src/main/resources/log4j.properties
@@ -23,14 +23,35 @@
 # settings will override the settings in this file.
 #
 
-log4j.rootLogger=INFO
+log4j.rootLogger=INFO,QuietAppender,LoudAppender
 
 log4j.logger.org.apache=INFO
-log4j.logger.org.wso2=INFO
+log4j.logger.org.wso2=TRACE
 log4j.logger.org.apache.directory.server.core=ERROR
 
 # Specification of Handler used by Console Logger
 handlers=java.util.logging.ConsoleHandler
+
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%m%n
+
+log4j.appender.QuietAppender=org.apache.log4j.RollingFileAppender
+log4j.appender.QuietAppender.File=wso2cep-sample-summary.log
+log4j.appender.QuietAppender.MaxFileSize=10MB
+log4j.appender.QuietAppender.MaxBackupIndex=1
+log4j.appender.QuietAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.QuietAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.QuietAppender.Threshold=INFO
+
+log4j.appender.LoudAppender=org.apache.log4j.RollingFileAppender
+log4j.appender.LoudAppender.File=wso2cep-sample-out.log
+log4j.appender.LoudAppender.MaxFileSize=100MB
+log4j.appender.LoudAppender.MaxBackupIndex=1
+log4j.appender.LoudAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.LoudAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.LoudAppender.Threshold=TRACE
+log4j.appender.LoudAppender.Append=false
 
 # Replacing default INFO level with SEVERE
 java.util.logging.ConsoleHandler.level=SEVERE
