--- a/modules/samples/producers/performance-test/pom.xml
+++ b/modules/samples/producers/performance-test/pom.xml
@@ -9,8 +9,6 @@
         <artifactId>cep-samples-producers</artifactId>
         <version>4.0.0-SNAPSHOT</version>
     </parent>
-
-    <groupId>org.wso2.cep</groupId>
     <artifactId>performance-test-client</artifactId>
 
     <packaging>jar</packaging>
@@ -57,7 +55,6 @@
         </dependency>
     </dependencies>
 
-<!--
     <build>
         <plugins>
             <plugin>
@@ -65,7 +62,7 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>create-sample-bundle</id>
+                        <id>create-dep-jar</id>
                         <phase>package</phase>
                         <goals>
                             <goal>single</goal>
@@ -73,7 +70,8 @@
                         <configuration>
                             <archive>
                                 <manifest>
-                                    <mainClass>org.wso2.carbon.cep.sample.client.AnalyticsStatisticsClient</mainClass>
+                                    <mainClass>org.wso2.carbon.cep.sample.client.PerfTestClient</mainClass>
+                                    <addClasspath>true</addClasspath>
                                 </manifest>
                             </archive>
                             <descriptorRefs>
@@ -87,7 +85,6 @@
 
         </plugins>
     </build>
--->
 
 
     <licenses>
