--- a/modules/distribution/repository/conf/log4j.properties
+++ b/modules/distribution/repository/conf/log4j.properties
@@ -98,7 +98,7 @@ log4j.appender.CARBON_CONSOLE.layout.TenantPattern=%U%@%D[%T]
 log4j.appender.CARBON_CONSOLE.threshold=DEBUG
 
 # CARBON_MEMORY is set to be a MemoryAppender using a PatternLayout.
-log4j.appender.CARBON_MEMORY=org.wso2.carbon.logging.appender.CarbonMemoryAppender
+log4j.appender.CARBON_MEMORY=org.wso2.carbon.logging.service.appender.CarbonMemoryAppender
 log4j.appender.CARBON_MEMORY.layout=org.wso2.carbon.utils.logging.TenantAwarePatternLayout
 # ConversionPattern will be overridden by the configuration setting in the DB
 log4j.appender.CARBON_MEMORY.layout.ConversionPattern=TID: [%T] [%S] [%d] %P%5p {%c} - %x %m {%c}%n
@@ -127,7 +127,7 @@ log4j.appender.CARBON_SYS_LOG.Facility=USER
 log4j.appender.CARBON_SYS_LOG.threshold=DEBUG
 
 # LOGEVENT is set to be a LogEventAppender using a PatternLayout to send logs to LOGEVENT 
-log4j.appender.LOGEVENT=org.wso2.carbon.logging.appender.LogEventAppender
+log4j.appender.LOGEVENT=org.wso2.carbon.logging.service.appender.LogEventAppender
 log4j.appender.LOGEVENT.url=tcp://localhost:7611
 log4j.appender.LOGEVENT.layout=org.wso2.carbon.utils.logging.TenantAwarePatternLayout
 log4j.appender.LOGEVENT.columnList=%T,%S,%A,%d,%c,%p,%m,%H,%I,%Stacktrace
