addning UI integration test module for CEP

--- a/modules/integration/pom.xml
+++ b/modules/integration/pom.xml
@@ -34,9 +34,11 @@
 
     <modules>
         <module>tests-common/admin-clients</module>
+        <module>tests-common/ui-pages</module>
         <module>tests-common/integration-test-utils</module>
         <module>tests-common/test-artifacts</module>
         <module>tests-integration/tests</module>
+        <module>tests-ui-integration/tests-ui</module>
     </modules>
 
 </project>
