--- a/modules/samples/producers/analytics-stats/pom.xml
+++ b/modules/samples/producers/analytics-stats/pom.xml
@@ -19,39 +19,36 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.wso2.cep</groupId>
-        <artifactId>cep-samples-parent</artifactId>
+        <artifactId>cep-samples-producers</artifactId>
         <version>4.0.0-SNAPSHOT</version>
     </parent>
 
     <groupId>org.wso2.cep</groupId>
-    <artifactId>cep-samples-producers</artifactId>
-    <name>WSO2 CEP - Samples Producers</name>
-    <version>4.0.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <artifactId>analytics-stats-client</artifactId>
+    <name>WSO2 CEP - Producer - Analytics Stats Clients</name>
 
 
-    <modelVersion>4.0.0</modelVersion>
+    <dependencies>
+        <dependency>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.databridge.agent.thrift</artifactId>
+            <version>4.3.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.databridge.commons</artifactId>
+            <version>4.3.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.databridge.commons.thrift</artifactId>
+            <version>4.3.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
-    <modules>
-        <module>stock-quote</module>
-        <module>service-stats</module>
-        <module>activity-monitoring</module>
-        <module>httpd-logs</module>
-        <module>kpi-definition</module>
-        <module>mediation-stats</module>
-        <module>performance-test</module>
-        <module>purchase-info</module>
-        <module>pizza-shop</module>
-        <module>twitter-feed</module>
-        <module>flight-stats</module>
-        <module>login-info</module>
-        <module>atm-transaction-stats</module>
-        <module>foo-data</module>
-        <module>sensor-stats</module>
-        <module>analytics-stats</module>
-    </modules>
 
 </project>
