--- a/pom.xml
+++ b/pom.xml
@@ -469,7 +469,7 @@
         <jibx.version>1.2.1.wso2v1</jibx.version>
         <axis2.jibx.version>1.6.0.wso2v1</axis2.jibx.version>
         <axis2.jaxb.version>1.6.0.wso2v1</axis2.jaxb.version>
-        <axis2.version>1.6.1.wso2v11-SNAPSHOT</axis2.version>
+        <axis2.version>1.6.1.wso2v11</axis2.version>
         <jaxb.version>2.2.5.wso2v1</jaxb.version>
         <orbit.version.axiom>1.2.11.wso2v5</orbit.version.axiom>
         <version.commons.logging>1.1</version.commons.logging>
