Added new sample. Sample contains new artifacts, new lib files, 2 new producers and 1 new consumer

--- a/modules/samples/consumers/pom.xml
+++ b/modules/samples/consumers/pom.xml
@@ -38,6 +38,7 @@
         <module>axis2-log-service</module>
         <module>generic-log-service</module>
         <module>dashboard-service</module>
+        <module>object-detection-service</module>
     </modules>
 
 </project>
