--- a/modules/samples/producers/pom.xml
+++ b/modules/samples/producers/pom.xml
@@ -16,7 +16,9 @@
 ~ specific language governing permissions and limitations
 ~ under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
         <groupId>org.wso2.cep</groupId>
@@ -24,6 +26,7 @@
         <version>4.0.0-SNAPSHOT</version>
     </parent>
 
+    <groupId>org.wso2.cep</groupId>
     <artifactId>cep-samples-producers</artifactId>
     <name>WSO2 CEP - Samples Producers</name>
     <version>4.0.0-SNAPSHOT</version>
@@ -50,6 +53,8 @@
         <module>sensor-stats</module>
         <module>analytics-stats</module>
         <module>stock-quote-wso2-event</module>
+        <module>object-detection-client</module>
+        <module>video-frame-client</module>
     </modules>
 
 </project>
